# slack-search

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: config.py  db.py  embeddings.py  llms.py  main.py  slack_handlers.py
src/slack_vector_bot/: __init__.py  db.py  slack_handlers.py
